--- a/mi_app/public/registro.html
+++ b/mi_app/public/registro.html
@@ -9,23 +9,37 @@
 <body>
     <h2>Registrar Usuario</h2>
     <form id="registroForm">
-    <label for="nombre">Nombre completo:</label>
-    <input type="text" id="nombre" placeholder="Nombre" required>
-    <label for="email">Correo Electronico:</label>
-    <input type="email" id="correo" placeholder="Correo" required>
-    <label for="password">Contraseña:</label>
-    <input type="password" id="clave" placeholder="Contraseña" required>
-    <label for="rol">Rol:</label>
-    <select id="rol">
-        <option value="usuario">Usuario</option>
-        <option value="admin">Administrador</option>
-        <option value="cliente">Cliente</option>
-    </select>
-    <div class="buttons">
-        <button type="submit">Registrar</button>
-        <button type="button" id="cancelModalBtn">Cancelar</button>
-    </div>
-</form>
+        <label for="nombre">Nombre completo:</label>
+        <input type="text" id="nombre" placeholder="Nombre" required>
+
+        <label for="nombre_usuario">Nombre de usuario:</label>
+        <input type="text" id="nombre_usuario" placeholder="Nombre de usuario" required>
+
+        <label for="correo">Correo Electrónico:</label>
+        <input type="email" id="correo" placeholder="Correo" required>
+
+        <label for="clave">Contraseña:</label>
+        <input type="password" id="clave" placeholder="Contraseña" required>
+
+        <label for="rol">Rol:</label>
+        <select id="rol" required>
+            <option value="usuario">Usuario</option>
+            <option value="admin">Administrador</option>
+            <option value="cliente">Cliente</option>
+        </select>
+
+        <label for="estado">Estado:</label>
+        <select id="estado" required>
+            <option value="1">Activo</option>
+            <option value="0">Inactivo</option>
+        </select>
+
+        <div class="buttons">
+            <button type="submit">Registrar</button>
+            <button type="button" id="cancelModalBtn">Cancelar</button>
+        </div>
+    </form>
+
     <script src="js/registro.js"></script>
 </body>
 </html>
